# msu_autorally_src

./: .gitattributes  EA_environment_details.yml  README.md  installation_steps.txt  requirements.txt  ros_environment_details.txt
autorally/autorally_control/src/base_controller_nodelet/: .base_controller_nodelet.cpp.swp  .base_controller_nodelet.h.swp  CMakeLists.txt  base_controller_nodelet.cpp  base_controller_nodelet.h
autorally/autorally_control/src/tele_op_PID_speed_controller/: CMakeLists.txt  tele_op_PID_speed_controller.cpp  tele_op_PID_speed_controller.h
autorally/autorally_control/src/tele_op_nodelet/: CMakeLists.txt  tele_op_nodelet.cpp  tele_op_nodelet.h
msu_autorally/msu_autorally_helper/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
msu_autorally/msu_autorally_helper/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
msu_autorally/msu_autorally_helper/launch/: autoRallyPlatform_MSU.launch  autoRallyTrackWorld_scaled.launch  autorally_ros_nav_stack.launch  autorally_utility_monitors.launch  base_controller_nodelet-old.launch  base_controller_nodelet.launch  basic_sim.launch  enki_speed_signal_publisher.launch  gmapping_demo.launch  map_server.launch  msu_hector_mapping.launch  spawn_autorally_model.launch  spawn_autorally_platform.launch  spawn_gazebo_world.launch  speed_signal_publisher.launch  tele_op_PID_speed_controller.launch  tele_op_nodelet.launch  test_sim.launch  testing.launch  top_level.launch  twist_signal_pub.launch  way_point_publisher.launch
msu_autorally/msu_autorally_helper/launch/PID_tuning/: spawn_autorally_platform_PID_tuning.launch  spawn_gazebo_world_PID_tuning.launch
msu_autorally/msu_autorally_helper/launch/archive/: msu_gmapping.launch  test_sim.launch
msu_autorally/msu_autorally_helper/launch/inclide_PID_tuning/: spawn_autorally_platform_PID_incline.launch  spawn_gazebo_world_PID_incline.launch
msu_autorally/msu_autorally_helper/launch/incline_PID_tuning/: debug_incline.launch  spawn_autorally_platform_PID_incline.launch  spawn_gazebo_world_PID_incline.launch
msu_autorally/msu_autorally_helper/launch/nav_stack_tuning/: spawn_autorally_platform_nav_tuning.launch  spawn_gazebo_world_nav_tuning.launch  spawn_gazebo_world_nav_tuning_new.launch
msu_autorally/msu_autorally_helper/maps/: base_oval_track_map.yaml  base_oval_track_map_clean.yaml  blank_map.yaml
msu_autorally/msu_autorally_helper/models/: autoRallyPlatform_MSU.xacro  autoRallyPlatform_MSU_JF.xacro  autoRallyTrack.urdf  autoRallyTrack_scaled.urdf
msu_autorally/msu_autorally_helper/nodes/: autorally_twist_pub.py  autorally_twist_truth_pub.py  twist_signal_pub.py
msu_autorally/msu_autorally_helper/speed_signals/: ramp_up_hold_ramp_down.yaml
msu_autorally/msu_autorally_helper/src/: base_controller.py  base_controller.txt  empty_node.py  test_pid.py  waypoint_modifier.py
msu_autorally/msu_autorally_helper/src/archive/start_scripts/: start_basic_sim.py
msu_autorally/msu_autorally_helper/src/base_controller_nodelet/: base_controller_nodelet.cpp  base_controller_nodelet.h
msu_autorally/msu_autorally_helper/src/controllers/: archive  base_controller.py  enki_speed_signal_publisher.py  speed_signal_publisher.py  teleop_constant_speed_controller.py  teleop_keyboard_controller.py
msu_autorally/msu_autorally_helper/src/evo_ros/: reset_sim.py
msu_autorally/msu_autorally_helper/src/move_base_goal_handlers/: move_base_goal_logger.py  move_base_goal_publisher_node.py  test_move_base_goal_publisher.py
msu_autorally/msu_autorally_helper/src/paramater_publishers/: constant_speed_controller_speed_pub.py  runstopMotionEnabled_pub.py
msu_autorally/msu_autorally_helper/src/review_visualizer_logger/logs/: multiple-shapes.json~  test.json  test.json~  test2.json
msu_autorally/msu_autorally_helper/src/tf_helpers/: gazebo_model_state_to_baselink_tf_broadcaster.py  kinect_tf_broadcaster.py  laser_tf_broadcaster.py  laser_tf_broadcaster.py~  laser_tf_listener.py  odom_to_baselink_tf_broadcaster.py
msu_autorally/msu_autorally_helper/src/utility_monitors/: autorally_actual_speed_monitor.py  autorally_collision_monitor.py  autorally_distance_traveled_monitor.py  empty_node (copy).py
msu_autorally/msu_autorally_helper/tmp-storage/: autoRallyPlatform_MSU.launch  autoRallyTrackWorld_scaled.launch
msu_autorally/msu_autorally_helper/tmp-storage/models/: autoRallyTrack.urdf  autoRallyTrack_scaled.urdf
msu_autorally/msu_autorally_helper/tmp-storage/worlds/: uneven-obstacle_test.world
msu_autorally/msu_autorally_helper/waypoints/: obstacle_wp.yaml  obstacle_wp_jon.yaml  obstacle_wp_v2.txt  simple_loop1.yaml  test_set.yaml  waypoints_08-01-18_11:39.yaml
msu_autorally/msu_autorally_helper/worlds/: empty_track_world.world  gen_obstacle_world.py  obstacle_world.world  test.world  uneven-obstacle_world.world
msu_autorally/msu_autorally_helper/worlds/templates/: box.template  cylinder.template  decode_test-0.world  gen_obstacle_world.py  generated_obstacle_sky_world.world  obstacle_sky_world.template  out.txt
(+596 files in other folders)
